--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <![endif]-->
 </head>
 <body id="page-top" class="index">
-
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container">
@@ -71,7 +70,7 @@
             <div class="intro-text">
                 <div class="intro-heading">Team Tibet Snowlion NYFC</div>
                 <div class="intro-lead-in">Come play with us</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll btn btn-xl">Find Out More</a>
             </div>
         </div>
     </header>
@@ -81,11 +80,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
+                    <h2 class="section-heading">About Us</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <p class="text-muted">Vape lyft bushwick ennui actually, taxidermy tumblr flannel beard mixtape hoodie schlitz flexitarian. Tattooed organic raclette, narwhal letterpress hashtag pug butcher. Aesthetic fashion axe unicorn hoodie. +1 bespoke hot chicken, air plant pork belly fam kogi bicycle rights pop-up mixtape tacos semiotics gentrify wolf godard. Next level cray lomo, bushwick VHS whatever tilde shaman raw denim plaid yuccie. Stumptown health goth cardigan 8-bit kitsch pok pok. Four dollar toast yuccie bespoke, tumeric keffiyeh bicycle rights synth marfa tattooed tbh.</p>
+                    <p class="text-muted">Live-edge bespoke viral PBR&B drinking vinegar fingerstache. Roof party williamsburg knausgaard asymmetrical authentic, health goth direct trade microdosing distillery shaman yuccie shoreditch butcher ennui. Succulents pour-over slow-carb iPhone, tilde ramps lyft. Church-key venmo glossier, austin enamel pin PBR&B snackwave ugh activated charcoal occupy. Edison bulb mustache man bun, health goth pok pok letterpress leggings cold-pressed. Letterpress banh mi waistcoat, poutine live-edge tousled mlkshk. Keffiyeh twee pickled pok pok tumeric.</p>
                 </div>
             </div>
-            <div class="row text-center">
+<!--             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -110,7 +111,7 @@
                     <h4 class="service-heading">Web Security</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -119,7 +120,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
+                    <h2 class="section-heading">Team Roster</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
