--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="teamroster" class="bg-light-gray">
+    <section id="teamroster" class="bg-blue-base">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
