--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="teamroster" class="bg-blue-base">
+    <section id="teamroster" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Team Roster</h2>
+                    <h2 id="section-heading-teamroster" class="section-heading">Team Roster</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
@@ -146,7 +146,7 @@
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -160,7 +160,7 @@
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -174,7 +174,7 @@
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -188,7 +188,7 @@
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -202,7 +202,7 @@
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -216,7 +216,7 @@
                     <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -230,7 +230,7 @@
                     <a href="#portfolioModal9" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/golden.png" class="img-responsive" alt="">
