--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 id="section-heading-teamroster" class="section-heading">Team Roster</h2>
+                    <h2 class="section-heading">Team Roster</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -244,7 +244,7 @@
                     <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/escape.png" class="img-responsive" alt="">
@@ -258,7 +258,7 @@
                     <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
@@ -272,7 +272,7 @@
                     <a href="#portfolioModal12" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
@@ -286,7 +286,7 @@
                     <a href="#portfolioModal13" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
@@ -301,7 +301,7 @@
                     <a href="#portfolioModal14" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
@@ -315,7 +315,7 @@
                     <a href="#portfolioModal15" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -329,7 +329,7 @@
                     <a href="#portfolioModal16" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -343,7 +343,7 @@
                     <a href="#portfolioModal17" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -357,7 +357,7 @@
                     <a href="#portfolioModal18" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -371,7 +371,7 @@
                     <a href="#portfolioModal19" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -385,7 +385,7 @@
                     <a href="#portfolioModal20" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
@@ -399,7 +399,7 @@
                     <a href="#portfolioModal21" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/golden.png" class="img-responsive" alt="">
@@ -413,7 +413,7 @@
                     <a href="#portfolioModal22" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/escape.png" class="img-responsive" alt="">
@@ -427,7 +427,7 @@
                     <a href="#portfolioModal23" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
@@ -441,7 +441,7 @@
                     <a href="#portfolioModal24" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
@@ -455,7 +455,7 @@
                     <a href="#portfolioModal25" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
