player and staff images, styling changes

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6767.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Player Name</h4>
-                        <p class="text-muted">16 Midfielder</p>
+                        <h4>Tashi Tsekyap</h4>
+                        <p class="text-muted">17 Midfielder</p>
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-6 portfolio-item">
@@ -149,7 +149,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6769.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -163,7 +163,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6771.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -177,7 +177,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6773.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -191,7 +191,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6779.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -205,7 +205,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6781.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name 7</h4>
@@ -219,7 +219,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6782.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -233,7 +233,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6783.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -247,7 +247,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6784.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -261,21 +261,21 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6785.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
                         <p class="text-muted">22 Stiker</p>
                     </div>
                 </div>
-                  <div class="col-md-2 col-sm-6 portfolio-item">
+                <div class="col-md-2 col-sm-6 portfolio-item">
                     <a href="#portfolioModal12" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6786.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -289,14 +289,13 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6787.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
                         <p class="text-muted">22 Stiker</p>
                     </div>
                 </div>
-                 <div class="row">
                 <div class="col-md-2 col-sm-6 portfolio-item">
                     <a href="#portfolioModal14" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -304,7 +303,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6789.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -318,7 +317,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6791.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -332,7 +331,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6794.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -346,7 +345,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6796.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -360,7 +359,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6802.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -374,7 +373,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/IMG_6808.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
@@ -551,10 +550,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-2 col-md-offset-1">
                     <div class="team-member">
-                        <img src="http://via.placeholder.com/140x100" class="img-responsive img-circle" alt="">
-                        <h4>John Doe</h4>
+                        <img src="img/portfolio/IMG_6797.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Sonam Dorjee</h4>
                         <p class="text-muted">Coach</p>
 <!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
@@ -566,11 +565,11 @@
                         </ul> -->
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-2">
                     <div class="team-member">
-                        <img src="http://via.placeholder.com/140x100" class="img-responsive img-circle" alt="">
-                        <h4>John Doe2</h4>
-                        <p class="text-muted">Coach</p>
+                        <img src="img/portfolio/IMG_6802.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Tenzin Kalden</h4>
+                        <p class="text-muted">Captain</p>
 <!--                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -581,11 +580,41 @@
                         </ul> -->
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-2">
                     <div class="team-member">
-                        <img src="http://via.placeholder.com/140x100" class="img-responsive img-circle" alt="">
-                        <h4>John Doe</h4>
-                        <p class="text-muted">Coach</p>
+                        <img src="img/portfolio/IMG_6796.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Tenzin Yougyal</h4>
+                        <p class="text-muted">Co-Captain</p>
+<!--                         <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul> -->
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="team-member">
+                        <img src="img/portfolio/IMG_6786.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Lobsang Paljor</h4>
+                        <p class="text-muted">Manager</p>
+<!--                         <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul> -->
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="team-member">
+                        <img src="img/portfolio/IMG_6800.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Kelsang-Tsultrim</h4>
+                        <p class="text-muted">Staff</p>
  <!--                        <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
