--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                 <!-- <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/test.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
