--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#page-top">Snowlion NYFC</a>
+                    <a class="navbar-brand page-scroll" href="#page-top"><span class="intro-caption-team">Snow</span><span class="intro-caption-tibet">lion</span><span class="intro-caption-snowlion">NYFC</span></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
