chnages that redirect to about page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="intro-text">
                 <div class="intro-heading"><span class="intro-caption-team">Team</span> <span class="intro-caption-tibet">Tibet</span> <span class="intro-caption-snowlion">Snowlion</span> <span class="intro-caption-team">N</span><span class="intro-caption-tibet">Y</span><span class="intro-caption-fc">FC</span></div>
                 <div class="intro-lead-in">Come play with us</div>
-                <a href="#services" class="page-scroll btn btn-xl">Find Out More</a>
+                <a href="#about" class="page-scroll btn btn-xl">Find Out More</a>
             </div>
         </div>
     </header>
