center copyright at bootom of footer

--- a/index.html
+++ b/index.html
@@ -637,10 +637,12 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <!-- switch column to class to col-md-4 
+                     if you want to add social media links and terms/privacy pages -->
+                <div class="col-md-12">
                     <span class="copyright">Copyright &copy; Team Tibet Snowlion NYFC 2017</span>
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -657,7 +659,7 @@
                         <li><a href="#">Terms of Use</a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
     </footer>
