add blue to color

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand page-scroll" href="#page-top"><span class="intro-caption-team">Snow</span><span class="intro-caption-tibet">lion</span><span class="intro-caption-snowlion">NYFC</span></a>
+                    <a class="navbar-brand page-scroll" href="#page-top"><span class="intro-caption-team">Snow</span><span class="intro-caption-tibet">lion</span><span class="intro-caption-snowlion">NY</span><span class="intro-caption-blue">FC</span></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
     <header id="home">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading"><span class="intro-caption-team">Team</span> <span class="intro-caption-tibet">Tibet</span> <span class="intro-caption-snowlion">Snowlion</span> <span class="intro-caption-team">N</span><span class="intro-caption-tibet">Y</span><span class="intro-caption-fc">FC</span></div>
+                <div class="intro-heading"><span class="intro-caption-team">Team</span> <span class="intro-caption-tibet">Tibet</span> <span class="intro-caption-snowlion">Snow</span><span class="intro-caption-blue">lion</span> <span class="intro-caption-team">N</span><span class="intro-caption-tibet">Y</span><span class="intro-caption-fc">F</span><span class="intro-caption-blue">C</span></div>
                 <div class="intro-lead-in">Come play with us</div>
                 <a href="#about" class="page-scroll btn btn-xl">Find Out More</a>
             </div>
