add official calendar

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <iframe style="width: 100%;" src="https://calendar.google.com/calendar/embed?src=urfhi2dffa4p37lfs2jnb0r5d4%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                    <iframe class="schedule-gcalendar" src="https://calendar.google.com/calendar/embed?src=teamtibetsnowlionfc%40gmail.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
         </div>
