--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header id="home">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading"><span class="intro-caption-team">Team</span> <span class="intro-caption-tibet">Tibet</span> <span class="intro-caption-snowlion">Snow</span><span class="intro-caption-blue">lion</span> <span class="intro-caption-team">N</span><span class="intro-caption-tibet">Y</span><span class="intro-caption-fc">F</span><span class="intro-caption-blue">C</span></div>
+                <div class="intro-heading"><span class="intro-caption-snowlion">Team Tibet Snowlion NYFC</span></div>
                 <div class="intro-lead-in">Come play with us</div>
                 <a href="#about" class="page-scroll btn btn-xl">Find Out More</a>
             </div>
@@ -378,90 +378,6 @@
                     <div class="portfolio-caption">
                         <h4>Player Name</h4>
                         <p class="text-muted">16 Midfielder</p>
-                    </div>
-                </div>
-                 <div class="col-md-2 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal20" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <!-- <i class="fa fa-plus fa-3x"></i> -->
-                            </div>
-                        </div>
-                        <img src="img/portfolio/test.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Player Name</h4>
-                        <p class="text-muted">16 Midfielder</p>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal21" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <!-- <i class="fa fa-plus fa-3x"></i> -->
-                            </div>
-                        </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Player Name</h4>
-                        <p class="text-muted">16 Midfielder</p>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal22" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <!-- <i class="fa fa-plus fa-3x"></i> -->
-                            </div>
-                        </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Player Name</h4>
-                        <p class="text-muted">10 Midfield</p>
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal23" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <!-- <i class="fa fa-plus fa-3x"></i> -->
-                            </div>
-                        </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Player Name</h4>
-                        <p class="text-muted">22 Stiker</p>
-                    </div>
-                </div>
-                  <div class="col-md-2 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal24" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <!-- <i class="fa fa-plus fa-3x"></i> -->
-                            </div>
-                        </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Player Name</h4>
-                        <p class="text-muted">22 Stiker</p>
-                    </div>
-                </div>
-                  <div class="col-md-2 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal25" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <!-- <i class="fa fa-plus fa-3x"></i> -->
-                            </div>
-                        </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Player Name</h4>
-                        <p class="text-muted">22 Stiker</p>
                     </div>
                 </div>
             </div>
